improvement: small visual tweak

--- a/css/style.less
+++ b/css/style.less
@@ -2529,7 +2529,7 @@ fieldset {
 .lms-ui-date-container,
 .lms-ui-datetime-container {
 	display: inline-flex;
-	padding-right: 0.4em;
+	//padding-right: 0.4em;
 }
 
 .lms-ui-category-label {
